Make text black on mobile, fix invisible go button

--- a/manager/static/manager/master/forms.css
+++ b/manager/static/manager/master/forms.css
@@ -9,6 +9,11 @@
     margin-left: 0.2em;
 }
 
+input,
+select {
+    color: black;
+}
+
 .form input,
 .form select,
 .form span[contenteditable],
@@ -44,8 +49,7 @@ input[type="checkbox"]:focus::before {
     color: darkred;
 }
 
-.form button,
-.form .toggle label {
+.form button {
     padding: 0px;
     padding-bottom: 1px;
     border: none;
@@ -54,6 +58,7 @@ input[type="checkbox"]:focus::before {
     background: none;
     font-size: inherit;
     font-weight: bold;
+    color: inherit;
 }
 
 .form button.search:focus,
